frontend/test/should_pass/bitbucket5.gm
package TestPackage {
    node class TestNode;
}