frontend/test/should_fail/inh_model_011.gm
node class A {
	abstract i2;
}
